--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -1,9 +1,89 @@
 .menu_container {
+    display: flex;
+    flex-flow: column;
     flex: 0 1 25vw; /* Takes exactly 20% of the viewport width */
+    gap: 10 px;
     background-color: #b8cee335;
     border-right: 1px solid #e0e0e0;
     padding: 0.2rem;
+    padding-bottom: 1rem;
     margin: 0 0.5rem 0 0;
     box-sizing: border-box;
     overflow-y: auto; /* Add scroll for long menus */
+}
+
+.menu_container > div{
+    margin: 0.2rem;
+    padding: 0.2rem;
+    padding-bottom: 1rem;
+    border: #e0e0e0 1px solid;
+    border-radius: 5px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    background-color: #b8cee353;
+}
+
+
+
+
+/* Menu Map part */
+
+.world_header{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    color: rgb(14, 34, 51);
+}
+
+.select_map{
+    display: grid;
+    grid-template-columns: 80% 1fr auto;
+    align-items: center;
+    gap: 8px;
+    margin: 8px 0;
+}
+
+.select_map label, #input_map{
+    grid-column: 1 / -1;
+}
+
+/* Menu Empires part */
+
+.empire_header{
+    margin-bottom: 1rem;
+}
+
+.empire_container .empire_list, .empire_container .empire_settings{
+    background-color: #3b5c7b8b;
+    border: 1px solid white;
+}
+
+.empire_header{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    color: rgb(14, 34, 51);
+}
+
+.empire_list{
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 1rem 0.5rem;
+    border-radius: 5px 5px 0 0;
+}
+
+.empire_box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.5rem;
+    padding: 0.3rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);;
+    border-radius: 15px;
+    background-color: #051d3485;
+    font-size: 10px;
+    color: rgba(136, 144, 160, 0.753);
+}
+
+.empire_settings{
+    padding: 0rem 0.5rem;
+    border-radius: 0 0 5px 5px;
 }
