--- a/src/style/Map.css
+++ b/src/style/Map.css
@@ -43,4 +43,17 @@
     width: 100%;
     height: 100%;
     background-color: #e9e9e9; /* Placeholder color, can be transparent */
+    z-index: 1;
+}
+
+.owner_canvas{
+    position: absolute; /* Allows canvas to fill the 'map' container */
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #e9e9e9; /* Placeholder color, can be transparent */
+    z-index: 2;
+    opacity: 0.2;
 }
