--- a/src/style/Map.css
+++ b/src/style/Map.css
@@ -56,4 +56,5 @@
     background-color: #e9e9e9; /* Placeholder color, can be transparent */
     z-index: 2;
     opacity: 0.2;
+    pointer-events: none;
 }
