--- a/src/style/Map.css
+++ b/src/style/Map.css
@@ -53,8 +53,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    background-color: #e9e9e9; /* Placeholder color, can be transparent */
+    /* background-color: #e9e9e9; Placeholder color, can be     transparent */
     z-index: 2;
-    opacity: 0.2;
     pointer-events: none;
 }
